src/objects/SunVisit__c.object
<CustomObject>
    <description>&quot;Sun Kindergarten&quot; visit object</description>
    <fields>
        <fullName>ArrivalTime__c</fullName>
        <defaultValue>TIMENOW()</defaultValue>
        <label>ArrivalTime</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeavingTime__c</fullName>
        <label>LeavingTime</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Superior__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Superior</label>
        <referenceTo>SunContact__c</referenceTo>
        <relationshipLabel>Visits (as Superior)</relationshipLabel>
        <relationshipName>Superiors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visitor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Visitor</label>
        <referenceTo>SunContact__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>SunVisits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>SunVisit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Visitor__c</columns>
        <columns>ArrivalTime__c</columns>
        <columns>LeavingTime__c</columns>
        <columns>Superior__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Visit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SunVisits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>